--- a/api-spec/protobuf/buf.yaml
+++ b/api-spec/protobuf/buf.yaml
@@ -1,5 +1,5 @@
 version: v1
-name: buf.build/ark-network/ark
+name: buf.build/ark-network/coordinator
 deps:
   - buf.build/googleapis/googleapis
 breaking:
