fix after review

--- a/asp/Makefile
+++ b/asp/Makefile
@@ -1,13 +1,9 @@
-.PHONY: build build-noah clean cov help intergrationtest lint run test vet proto proto-lint
+.PHONY: build clean cov help intergrationtest lint run test vet proto proto-lint
 
 ## build: build for all platforms
 build:
 	@echo "Building arkd binary..."
 	@bash ./scripts/build
-
-build-noah:
-	@echo "Building noah binary..."
-	@bash ./scripts/build-noah
 
 ## clean: cleans the binary
 clean:
