--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -33,8 +33,7 @@ jobs:
         with:
           args: '-severity high -quiet ./...'
       - uses: bufbuild/buf-setup-action@v1.3.1
-      - name: check proto linting
-        run: make proto-lint
+      - uses: bufbuild/buf-lint-action@v1.3.1
       - run: go get -v -t -d ./...
       - name: unit testing
         run: make test
