--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -34,7 +34,7 @@ jobs:
           args: '-severity high -quiet ./...'
       - uses: bufbuild/buf-setup-action@v1.3.1
       - name: check proto linting
-        run: make proto-lint
+        run: buf lint
       - run: go get -v -t -d ./...
       - name: unit testing
         run: make test
