--- a/.github/workflows/ark.intergation.yaml
+++ b/.github/workflows/ark.intergation.yaml
@@ -5,7 +5,7 @@ on:
     branches: 
       - master
     paths:
-      - "asp/**"
+      - "server/**"
 
 jobs:
   test:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./asp
+        working-directory: ./server
     steps:
       - uses: actions/setup-go@v3
         with:
