--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -3,13 +3,13 @@ name: ci_unit
 on:
   push:
     paths:
-      - "asp/**"
+      - "server/**"
     branches: [master]
   pull_request:
     branches: 
       - master
     paths:
-      - "asp/**"
+      - "server/**"
 
 jobs:
   test:
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./asp
+        working-directory: ./server
     steps:
       - uses: actions/setup-go@v3
         with:
@@ -27,7 +27,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.54
-          working-directory: ./asp
+          working-directory: ./server
       - name: check code integrity
         uses: securego/gosec@master
         with:
