add PR trigger on integration CI

--- a/.github/workflows/ark.integration.yaml
+++ b/.github/workflows/ark.integration.yaml
@@ -6,6 +6,11 @@ on:
       - master
     paths:
       - "server/**"
+  pull_request:
+    branches: 
+      - master
+    paths:
+      - "server/**"
 
 jobs:
   test:
