Add integration tests and regtest support (#128)
* regtest support + integration tests (e2e)

* add integration CI

* add PR trigger on integration CI

* wait for ocean to be unlocked at startup

* integration tests: add tests flags and build docker images at startup

* use nigiri chopsticks-liquid

* fix after reviews

* Update client/init.go

Co-authored-by: Pietralberto Mazza <18440657+altafan@users.noreply.github.com>
Signed-off-by: Louis Singer <41042567+louisinger@users.noreply.github.com>

* do not trigger integration on PR

---------

Signed-off-by: Louis Singer <41042567+louisinger@users.noreply.github.com>
Co-authored-by: Pietralberto Mazza <18440657+altafan@users.noreply.github.com>

--- a/server/Makefile
+++ b/server/Makefile
@@ -23,7 +23,7 @@ help:
 ## intergrationtest: runs integration tests
 integrationtest:
 	@echo "Running integration tests..."
-	@find . -name go.mod -execdir go test -v -count=1 -race $(go list ./... | grep internal/test) \;
+	@go test -v -count=1 -race -timeout 200s github.com/ark-network/ark/test/e2e
 
 ## lint: lint codebase
 lint:
@@ -40,7 +40,7 @@ run: clean
 ## test: runs unit and component tests
 test:
 	@echo "Running unit tests..."
-	@find . -name go.mod -execdir go test -v -count=1 -race ./... $(go list ./... | grep -v internal/test) \;
+	@find . -name go.mod -execdir go test -v -count=1 -race ./internal/... \;
 
 ## vet: code analysis
 vet:
