--- a/.github/workflows/ark.release.yaml
+++ b/.github/workflows/ark.release.yaml
@@ -124,5 +124,5 @@ jobs:
       with:
         context: .
         push: true
-        tags: ghcr.io/${{ github.repository }}:${{ github.event.release.tag_name }}
+        tags: ghcr.io/${{ github.repository }}:${{ github.event.release.tag_name }},ghcr.io/${{ github.repository }}:latest
         platforms: linux/amd64,linux/arm64
