--- a/pkg/client-sdk/Makefile
+++ b/pkg/client-sdk/Makefile
@@ -1,4 +1,16 @@
+.PHONY: genrest test vet
+
+## genrest: compiles rest client from stub with https://github.com/go-swagger/go-swagger
 genrest:
-	swagger generate client -f ../../server/api-spec/openapi/swagger/ark/v1/service.swagger.json -t ./client/rest/service --client-package=arkservice
+	@echo "Generating rest client from stub..."
+	@swagger generate client -f ../../server/api-spec/openapi/swagger/ark/v1/service.swagger.json -t ./client/rest/service --client-package=arkservice
+
+## test: runs unit tests
+test:
+	@echo "Running unit tests..."
+	@go test -v -count=1 -race ./...
+
+## vet: code analysis
 vet:
-	go vet ./...
+	@echo "Running code analysis..."
+	@go vet ./...
