fix container naming

--- a/docker-compose.clark.regtest.yml
+++ b/docker-compose.clark.regtest.yml
@@ -1,8 +1,6 @@
-version: "3.7"
-
 services:
-  arkd:
-    container_name: arkd 
+  clarkd:
+    container_name: clarkd 
     build: 
       context: .
       dockerfile: Dockerfile
