sqlite:sqlc&migration not working with sqlc.embed since we have multiple select queries with multiple left joins this i wanted to use sqlc.embed in order to have less manual serialization work, however sqlc.embed is not working properly with left join since it is not creating sql.Null values and underling sql.Scan cant serialise null values to non pointer fields, https://github.com/sqlc-dev/sqlc/issues/2997, this commit is added as learn lesson, in next commit will try with view workaround: https://github.com/sqlc-dev/sqlc/issues/2348\#issuecomment-1757903348

--- a/server/Makefile
+++ b/server/Makefile
@@ -85,3 +85,8 @@ mig_down_yes:
 ## vet_db: check if mig_up and mig_down are ok
 vet_db: recreatedb mig_up mig_down_yes
 	@echo "vet db migration scripts..."
+
+## sqlc: gen sql
+sqlc:
+	@echo "gen sql..."
+	cd ./internal/infrastructure/db/sqlite; sqlc generate
