--- a/server/internal/infrastructure/db/sqlite/sqlc.yaml
+++ b/server/internal/infrastructure/db/sqlite/sqlc.yaml
@@ -1,7 +1,9 @@
-version: 1
-packages:
+version: "2"
+sql:
   - engine: "sqlite"
     queries: "sqlc/query.sql"
     schema: "migration"
-    path: "sqlc/queries"
-    name: "queries"
+    gen:
+      go:
+        package: "queries"
+        out: "sqlc/queries"
