Add env var for wallet password

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     environment:
       - ARK_WALLET_ADDR=oceand:18000
       - ARK_ROUND_INTERVAL=10
-      - ARK_NETWORK=testnet
+      - ARK_NETWORK=liquidtestnet
     ports:
       - "8080:6000"
     volumes:
