--- a/docker-compose.clark.regtest.yml
+++ b/docker-compose.clark.regtest.yml
@@ -14,6 +14,8 @@ services:
       - ARK_MIN_RELAY_FEE=200
       - ARK_NEUTRINO_PEER=bitcoin:18444
       - ARK_ESPLORA_URL=http://chopsticks:3000
+      - ARK_NO_TLS=true
+      - ARK_NO_MACAROONS=true
     ports:
       - "6000:6000"
 
