--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -31,6 +31,8 @@ services:
       - ARK_DB_TYPE=sqlite
       - ARK_TX_BUILDER_TYPE=covenant
       - ARK_PORT=8080
+      - ARK_NO_TLS=true
+      - ARK_NO_MACAROONS=true
     ports:
       - "8080:8080"
 
