--- a/docker-compose.clark.regtest.yml
+++ b/docker-compose.clark.regtest.yml
@@ -18,6 +18,9 @@ services:
       - ARK_NO_MACAROONS=true
     ports:
       - "6000:6000"
+    volumes:
+      - clarkd:/app/data
+      - clark:/app/wallet-data
 
 volumes:
   clarkd:
