Add CreatePayment and CompletePayment (#229)
Co-authored-by: Marco Argentieri <tiero@users.noreply.github.com>

* Add claim command

* Persist pending data in sqlite repo

* Remove debug log

* Return pending data at interface level

* Fix unlocking btc wallet after restart

* Lint & Fix whitelist permissions

* Fix send command for covenant

* Update client/covenantless/claim.go

Signed-off-by: Marco Argentieri <3596602+tiero@users.noreply.github.com>

* Fix

* Pay for min relay fee instead of estimating fees for redeem and unconf forfeit txs

* Add support for pending payments (coventanless)

* Fixes

* Fixes

* Improve verbosity

* Fix coin selection

* Fix

---------

Signed-off-by: Marco Argentieri <3596602+tiero@users.noreply.github.com>
Co-authored-by: louisinger <louis@vulpem.com>
Co-authored-by: Marco Argentieri <tiero@users.noreply.github.com>
Co-authored-by: Marco Argentieri <3596602+tiero@users.noreply.github.com>

--- a/server/Makefile
+++ b/server/Makefile
@@ -33,13 +33,16 @@ lint:
 ## run: run in dev mode
 run: clean
 	@echo "Running arkd in dev mode..."
-	@export ARK_WALLET_ADDR=localhost:18000; \
+	@export ARK_NEUTRINO_PEER=localhost:18444; \
 	export ARK_ROUND_INTERVAL=10; \
 	export ARK_LOG_LEVEL=5; \
-	export ARK_NETWORK=liquidregtest; \
+	export ARK_NETWORK=regtest; \
 	export ARK_PORT=8080; \
 	export ARK_NO_TLS=true; \
 	export ARK_NO_MACAROONS=true; \
+	export ARK_TX_BUILDER_TYPE=covenantless; \
+	export ARK_ESPLORA_URL=http://localhost:3000; \
+	export ARK_MIN_RELAY_FEE=200; \
 	go run ./cmd/arkd
 
 ## test: runs unit and component tests
