--- a/.github/workflows/ark.release.yaml
+++ b/.github/workflows/ark.release.yaml
@@ -137,3 +137,7 @@ jobs:
         push: true
         tags: ghcr.io/${{ github.repository }}:${{ github.event.release.tag_name }},ghcr.io/${{ github.repository }}:latest
         platforms: linux/amd64,linux/arm64
+        build-args: |
+          VERSION=${{ github.event.release.tag_name }}
+          COMMIT=${{ github.sha }}
+          DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
