update release scripting
Signed-off-by: tiero <3596602+tiero@users.noreply.github.com>

--- a/client/scripts/build
+++ b/client/scripts/build
@@ -9,6 +9,7 @@ PARENT_PATH=$(dirname $(
 
 # Set VERSION (you can modify this to get the version from a file or environment variable)
 VERSION=$(git describe --tags --always --dirty 2>/dev/null || echo "unknown")
+COMMIT=${COMMIT:-$(git rev-parse HEAD)}
 
 # Set GOOS and GOARCH if not already set
 if [[ -z $GOOS ]]; then
@@ -20,6 +21,7 @@ fi
 
 echo "Building for $GOOS $GOARCH"
 echo "Version: $VERSION"
+echo "Commit: $COMMIT"
 
 # Change to the parent directory
 pushd $PARENT_PATH
@@ -28,7 +30,7 @@ pushd $PARENT_PATH
 mkdir -p build
 
 # Build the binary with version information
-GO111MODULE=on go build -ldflags="-s -w -X 'main.Version=$VERSION'" -o build/ark-$GOOS-$GOARCH .
+go build -ldflags="-s -w -X 'main.Version=$VERSION' -X 'main.Commit=$COMMIT'" -o build/ark-$GOOS-$GOARCH .
 
 echo "Build complete: build/ark-$GOOS-$GOARCH"
 
