--- a/server/scripts/build
+++ b/server/scripts/build
@@ -9,6 +9,7 @@ PARENT_PATH=$(dirname $(
 
 # Set VERSION (you can modify this to get the version from a file or environment variable)
 VERSION=$(git describe --tags --always --dirty 2>/dev/null || echo "unknown")
+COMMIT=${COMMIT:-$(git rev-parse HEAD)}
 
 # Get OS and ARCH
 OS=$(go env GOOS)
@@ -16,6 +17,8 @@ ARCH=$(go env GOARCH)
 
 echo "Building arkd for $OS $ARCH"
 echo "Version: $VERSION"
+echo "Commit: $COMMIT"
+
 
 # Change to the parent directory
 pushd $PARENT_PATH
@@ -24,7 +27,7 @@ pushd $PARENT_PATH
 mkdir -p build
 
 # Build the binary with version information
-go build -ldflags="-s -w -X 'main.Version=$VERSION'" -o build/arkd-$OS-$ARCH ./cmd/arkd
+go build -ldflags="-s -w -X 'main.Version=$VERSION' -X 'main.Commit=$COMMIT'" -o build/arkd-$OS-$ARCH ./cmd/arkd
 
 echo "Build complete: build/arkd-$OS-$ARCH"
 
