--- a/.github/workflows/ark.release.yaml
+++ b/.github/workflows/ark.release.yaml
@@ -114,8 +114,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: pkg/client-sdk/build/client-sdk.wasm
-        asset_name: client-sdk.wasm
+        asset_path: pkg/client-sdk/build/ark-sdk.wasm
+        asset_name: ark-sdk.wasm
         asset_content_type: application/wasm
 
     # Docker 
@@ -140,4 +140,3 @@ jobs:
         build-args: |
           VERSION=${{ github.event.release.tag_name }}
           COMMIT=${{ github.sha }}
-          DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
